# gdrive-cleaner

./: .env.test.example  .gitignore  CONTRIBUTING.MD  LICENSE.MD  README.MD  pyproject.toml  pytest.ini
src/gdrive_cleaner/: __init__.py  cli.py  drive_core.py  operations.py
tests/: conftest.py  helpers_drive.py  test_cli_handle_delete.py  test_cli_handlers_integration.py  test_cli_utils.py  test_copy_flow.py  test_drive_core_integration.py  test_drive_core_query.py  test_operations_fetch.py
tests/helpers/: cli_args_builders.py  helpers_console.py  helpers_drive.py  helpers_mock.py
tests/integration/: test_drive_core_integration.py
tests/unit/cli/: conftest.py  test_clear_folder_arguments.py  test_clear_folder_flow.py  test_cli_parser_validators.py  test_cli_utils.py  test_copy_flow.py  test_delete_arguments.py  test_delete_flow.py  test_fetch_flow.py  test_list_arguments.py  test_list_flow.py  test_main_dispatch.py  test_quota_flow.py
tests/unit/drive_core/: test_drive_core_batch_metadata.py  test_drive_core_delete.py  test_drive_core_query.py
tests/unit/operations/: test_ops_copy.py  test_ops_delete.py  test_ops_fetch.py  test_ops_list.py  test_ops_quota.py
